<resources>
    <string name="app_name">ApplicationKeuanganPribadi</string>
    <string name="terms">
         <![CDATA[
" Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Ciceros De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn t distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very useful when the focus is meant to be on design, not content.

The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum.

     "
           ]]>
    </string>
    <string name="perfirec">Perfirec</string>
    <string name="passcode">Unlocking with passcode</string>
    <string name="use_fr">Use your fingerprint</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="forgot">FORGOT ?</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
</resources>