<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinnActivity">

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:padding="30dp"
        android:text="@string/perfirec"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.oakkub.android.PinEditText
        android:id="@+id/pinn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:inputType="textNoSuggestions"
        app:pinHighlightStateDrawable="@drawable/pin_default_highlight_state"
        app:pinNormalStateDrawable="@drawable/pin_default_normal_state"
        app:pinSpace="16dp"
        app:pinHeight="24dp"
        app:pinWidth="24dp"
        app:layout_constraintTop_toBottomOf="@id/text_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passcode"
        app:layout_constraintTop_toBottomOf="@id/pinn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_fr"
        app:layout_constraintTop_toBottomOf="@id/text_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        app:layout_goneMarginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3"
        android:gravity="fill">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/_1"
                android:textSize="26sp"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/btnSeven"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_2"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:textSize="26sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/btnEight"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_3"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:textSize="26sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/btnNine"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/_4"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:layout_height="match_parent"
                android:id="@+id/btnFour"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_5"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:layout_height="match_parent"
                android:id="@+id/btnFive"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_6"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:layout_height="match_parent"
                android:id="@+id/btnSix"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/_7"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:layout_height="match_parent"
                android:id="@+id/btnOne"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_8"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:layout_height="match_parent"
                android:id="@+id/btnTwo"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/_9"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:textSize="26sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/btnThree"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:id="@+id/finger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/forgot"
                android:background="@drawable/ripple_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/btnDecimal"/>

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg"
                android:text="@string/_0"
                android:textSize="26sp" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:id="@+id/btnFinger"
                android:clickable="true">
            </Button>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_fingerprint_24"
                    android:onClick="clickFinger"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>